<resources>
    <string name="app_name">WSD</string>
    <string name="action_settings">Settings</string>
    <string name="turn_on">Turn On</string>
    <string name="get_visible">Get visible</string>
    <string name="list_devices">List devices</string>
    <string name="turn_off">turn off</string>
    <string name="send">Send</string>
    <string name="save">SAVE</string>
    <string-array name="navigation_drawer_items_array">
        <item>Connect</item>
        <item>Calendar</item>
        <item>Add event</item>
        <item>Events</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
